Styling Navigation Bar Completed

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -6,14 +6,22 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 
+.btnPrimary{
+    border-radius: 5px;
+    background: #FD6E0A;
+    color: white;
+    border: 0;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 18px 35px;
+}
+
 /* Navigation related styles */
 nav, nav > ul{
     display: flex;
     gap: 50px;
-}
-
-.textPrimary{
-    color: #FD6E0A;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav > h3 > span{
@@ -21,7 +29,7 @@ nav > h3 > span{
 }
 
 .navTitle{
-    color: var(--Dark-01, #181818);
+    color: #181818;
     font-size: 45px;
     font-weight: 800;
 }
@@ -32,4 +40,5 @@ nav li{
 
 nav li a{
     text-decoration: none;
+    color: #474747;
 }
