--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -54,14 +54,30 @@ nav li a{
 /* Header Related Styles */
 .header{
     background-color: #FFF8F3;
+    background-image: url("../images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0 150px;
     display: flex;
     align-items: center;
 }
 
 .banner .profilePic{
     width: 500px;
+}
+
+.bannerGreeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+
+.bannerTitle{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
 }
