--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -51,6 +51,20 @@ nav li a{
     color: #474747;
 }
 
+.sectionTitle{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+
+}
+
+.sectionDescription{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
+
 /* Header Related Styles */
 .header{
     background-color: #FFF8F3;
@@ -92,4 +106,5 @@ nav li a{
 /* About Section Styles */
 .about{
     padding: 130px;
+    margin: 130px 0;
 }
