--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -107,6 +107,10 @@ main{
     margin: 0 auto;
 }
 
+main section{
+    margin-top: 130px;
+}
+
 /* About Section Styles */
 .about{
     padding: 130px;
@@ -130,10 +134,36 @@ main{
     margin-top: 0;
 }
 
+/* Skills related styles */
+
 #whatIDo{
     padding: 30px 150px;
 }
 
 .skillsContainer{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skillDescription{
+    /* padding: 30px; */
+    color: #757575;
+}
+
+/* Resume Section Styles */
+.resumeColumnTitle{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resumeContainer{
     display: flex;
 }
