--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -166,4 +166,19 @@ main section{
 
 .resumeContainer{
     display: flex;
+    gap: 50px;
+}
+
+.resumeContainer hr{
+    margin: 30px 0;
+}
+
+.resumeItemTitle{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.resumeItemDescription, .resumeItemInstitute{
+    color: #757575;
 }
