--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -179,6 +179,24 @@ main section{
     font-weight: 700;
 }
 
+.resumeItemInstitute{
+    margin-bottom: 20px;
+    margin-top: 0;
+}
+
 .resumeItemDescription, .resumeItemInstitute{
     color: #757575;
+}
+
+.downloadCV{
+    text-align: center;
+    margin-top: 50px;
+}
+
+/* Footer Styles */
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
 }
