--- a/styles/practiceTaskTwo.css
+++ b/styles/practiceTaskTwo.css
@@ -1,17 +1,39 @@
-header > h2{
-    width: 500px;
+/* Imported Font */
+  @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700;800&display=swap');
+
+/* Shared Styles */
+*{
+    font-family: 'Work Sans', sans-serif;
+    margin: 0;
+}
+
+/* Designing Header Section */
+
+header{
+    background-image: url("../images/banner/banner1.png");
+    width: 1300px;
+    height: 808px;
+}
+
+.firstDiv{
+    text-align: right;
+    padding-top: 210px;
+    /* padding-right: 230px; */
+}
+
+.firstDiv h2{
+    /* width: 500px; */
     color: #151414;
     text-align: right;
-    font-family: Work Sans;
     font-size: 65px;
     font-weight: 700;
 }
 
-header > p{
-    width: 450px;
-    color: #444343;
-    text-align: right;
-    font-family: Work Sans;
-    font-weight: 400;
-    line-height: 26px;
+.firstDiv p{
+    color: var(--Dark-02, #444343);
+text-align: right;
+font-family: Work Sans;
+ 
+font-weight: 400;
+line-height: 26px;
 }
